--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "tailwindcss-animate": "^1.0.7",
     "use-places-autocomplete": "^4.0.1",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
